# risk-premia-app-py

./: CLAUDE.md  README.md  analysis_utils.py  app.py  backtest_utils.py  config.py  data_loader.py  pyproject.toml  requirements.txt  risk_premia_harvesting_summary.md  test_app.py
background/: risk-premia-backtests.Rmd  risk-premia-backtests.ipynb  risk-premia-notebook.ipynb
data/: rp-returns-7vol.pkl
portfolio/data/: rp_returns_volten.pkl
