[project]
name = "risk-premia-app-py"
version = "0.1.0"
description = "Simple Risk Premia Strategy App in Python, porting the interactive Shiny application developed by Kris Longmore at RobotWealth"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Marton Huebler" }
]
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pyreadr>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/MartonHuebler/risk-premia-app-py"
Repository = "https://github.com/MartonHuebler/risk-premia-app-py"
